// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpenseSummary /> should render summary for 0 expenses 1`] = `
<div>
  <h1>
    You're viewing 
    0
     
    expenses
     totaling 
    $0
  </h1>
</div>
`;

exports[`<ExpenseSummary /> should render summary for 1 expense 1`] = `
<div>
  <h1>
    You're viewing 
    1
     
    expense
     totaling 
    $1.23
  </h1>
</div>
`;

exports[`<ExpenseSummary /> should render summary for 2 expenses 1`] = `
<div>
  <h1>
    You're viewing 
    2
     
    expenses
     totaling 
    $1.23
  </h1>
</div>
`;

exports[`<ExpenseSummary /> should render summary for thousands of expenses 1`] = `
<div>
  <h1>
    You're viewing 
    12,345
     
    expenses
     totaling 
    $1,234,567.89
  </h1>
</div>
`;
